--- a/index.html
+++ b/index.html
@@ -44,14 +44,39 @@
     <hr>
 
     <br>
-    <section>
-     
+    <section id="nuestras-promociones">
+        <div class="division">
+            <h3></h3>
+            <h2>No sé que pondremos</h2>
+            <p>a</p>
+
+        </div>
+        <div class="division"></div>
+        <h3></h3>
+        <h2>No sé que pondremos</h2>
+        <p>a</p>
     </section>
     <br>
    
     <br>
     <footer>
-     
+        <div class="formulario">
+            <div class="form-header">
+                <h3>Get in touch</h3>
+           </div>
+            <form action="" class="form">
+                <div>
+                     <label for="">Nombre</label>
+                     <input type="text" name="nombre" placeholder="Nombre"> 
+                     <label for="">Correo</label>
+                     <input type="email" name="correo" placeholder="Correo">
+                </div> 
+                <div class="Message">
+                     <label for="">Mensaje</label>
+                     <div><textarea name="Mensaje" id="mensaje" placeholder="Mensaje"></textarea></div>
+                </div>   
+            </form>
+        </div>
     </footer>
 </body>
 </html>
