--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteles</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+</head> 
 <body>
     <div class="fondo">
-    <header>
+    <header class="margen">
         <p>Nombre Pastelería</p>
         <nav id="menu">
             <a href="">Inicio</a>
             <a href="">Nosotros</a>
             <a href="">Contacto</a>
         </nav>
-    </header>
         <hr>
+    </header>
+        
         <div class="contenido1">
             <h1>Bienvenido a la pasteleria</h1>
             <article>
@@ -26,7 +27,7 @@
                 <p>hola</p>
             </article>
 
-            <article>
+            <article id="lineas">
                 <img src="" alt="">
                 <h3>Elemento 2</h3>
                 <p>hola</p>
