--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="fondo">
     <header class="margen">
-        <p>Nombre Pastelería</p>
+        <p>Blue Bakery</p>
         <nav id="menu">
             <a href="">Inicio</a>
             <a href="">Nosotros</a>
@@ -20,7 +20,7 @@
     </header>
         
         <div class="contenido1">
-            <h1>Bienvenido a la pasteleria</h1>
+            <h1>Bienvenido a Blue Bakery</h1>
             <article>
                 <img src="" alt="">
                 <h3>Elemento 1</h3>
