--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
         <div class="contenido1">
             <h1>Bienvenido a Blue Bakery</h1>
             <article>
-                <img src="" alt="">
-                <h3>Elemento 1</h3>
-                <p>hola</p>
+                <img src="imgs/p1.png" alt="">
+                <h3>Pasteles Artesanos</h3>
+                <p>pasteles artesanos</p>
             </article>
 
             <article id="lineas">
-                <img src="" alt="">
-                <h3>Elemento 2</h3>
-                <p>hola</p>
+                <img src="imgs/p2.png" alt="">
+                <h3>Mejor pastelería 2022</h3>
+                <p>mejor pastelería 2022</p>
             </article>
 
             <article>
-                <img src="" alt="">
-                <h3>Elemento 3</h3>
-                <p>hola</p>
+                <img src="imgs/p3.png" alt="">
+                <h3>Mejores ingredientes</h3>
+                <p>mejores ingredientes</p>
             </article>
-
-            <button>Iniciar</button>
+            <br>
+            <button id="button">INICIAR</button>
         </div>
     </div>
     <hr>
@@ -47,37 +47,40 @@
     <br>
     <section id="nuestras-promociones">
         <div class="division">
-            <h3></h3>
-            <h2>No sé que pondremos</h2>
-            <p>a</p>
-
+            <img src="imgs/pastel1.jpg" alt="" style="border-radius: 50%">
+            <h3>Pasteles Flork memes</h3><br>
+            <p>Pasteles inspirados en memes de flork.</p><br>
+            <button class="button-pastel">Ver más</button>
         </div>
-        <div class="division"></div>
-        <h3></h3>
-        <h2>No sé que pondremos</h2>
-        <p>a</p>
+        <div class="division">
+            <img src="imgs/pastel2.jpg" alt="" style="border-radius: 50%">
+            <h3>Pasteles de cumpleaños</h3><br>
+            <p>Hermosos pasteles para cumpleaños.</p><br>
+            <button class="button-pastel">Ver más</button>
+        </div>
     </section>
     <br>
    
     <br>
     <footer>
-        <div class="formulario">
+        <div class="formulario"><br>
             <div class="form-header">
-                <h3>Get in touch</h3>
+                <h2>Get in touch</h2><br><br>
            </div>
             <form action="" class="form">
                 <div>
                      <label for="">Nombre</label>
-                     <input type="text" name="nombre" placeholder="Nombre"> 
+                     <input type="text" name="nombre" placeholder="Nombre"> <br><br><br>
                      <label for="">Correo</label>
-                     <input type="email" name="correo" placeholder="Correo">
-                </div> 
-                <div class="Message">
+                     <input type="email" name="correo" placeholder="Correo"> <br><br><br>
                      <label for="">Mensaje</label>
-                     <div><textarea name="Mensaje" id="mensaje" placeholder="Mensaje"></textarea></div>
+                     <input type="textarea" name="Mensaje" id="mensaje" placeholder="Mensaje"><br><br><br>
                 </div>   
+                <center><button id="button-form">ENVIAR</button></center><br>
             </form>
+            <p style="text-align:center">©Blue Bakery by Iyaaniris Arevalo y Madelaine Muñoz</p> 
         </div>
+        
     </footer>
 </body>
 </html>
